--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
     <artifactId>mail</artifactId>
     <version>1.4</version>
 </dependency>
+	  <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>
+<dependency>
+    <groupId>com.microsoft.sqlserver</groupId>
+    <artifactId>mssql-jdbc</artifactId>
+    <version>6.1.0.jre8</version>
+    <scope>test</scope>
+</dependency>
 	<dependency>
                <groupId>org.sikuli</groupId>
                <artifactId>sikuli-api</artifactId>
