commit the changes for some new methods and updated methods

--- a/Resources/config.properties
+++ b/Resources/config.properties
@@ -1,7 +1,13 @@
-URL=https://ctl--e2e.cs23.my.salesforce.com/
+URL=https://www.google.com/
 TimeOut=20
 APPPACCKAGE=com.bt.bms
 APPACTIVITY=com.movie.bms.splash.views.activities.SplashScreenActivity
-DEVICENAME=e754d6d3
-APPTYPE=native
-ANDROIDVERSION=6.0.1
+DEVICENAME=e8741e7
+APPTYPE=WebApp
+ANDROIDVERSION=5.1.1
+APPURL=https://www.google.com/
+ServiceURI				= https://www.googleapis.com
+Resources				= /books/v1/volumes
+PostResources			= /maps/api/place/add/json
+DeleteResources			= /maps/api/place/delete/json
+Key						= AIzaSyCm80-cwgG82AAtGzR5hTT1eafVN49AV_g
