--- a/pom.xml
+++ b/pom.xml
@@ -72,14 +72,14 @@
                <groupId>org.sikuli</groupId>
                <artifactId>sikuli-api</artifactId>
                <version>1.1.0</version>
-              <systemPath>${project.basedir}/Resources/sikulixapi.jar</systemPath>
+              <systemPath>${project.basedir}/Resources/JarFiles/sikulixapi.jar</systemPath>
                <scope>system</scope>
      </dependency> 
        <dependency>
                <groupId>com.ctl.cipherTools</groupId>
                <artifactId>CipherMe</artifactId> 
                <version>1.1.0</version>              
-              <systemPath>${project.basedir}/Resources/CIPHERME.jar</systemPath>
+              <systemPath>${project.basedir}/Resources/JarFiles/CIPHERME.jar</systemPath>
                <scope>system</scope>
      </dependency> 
      <dependency>
