working code of soap rest web and mob

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,39 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jre.level>1.8</jre.level>
+		<jdk.level>1.8</jdk.level>
   </properties>
+  
+  <build>
+		<plugins>
+			<!-- Compiler plug-in -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${jdk.level}</source>
+					<target>${jdk.level}</target>
+				</configuration>
+			</plugin>
+			<!-- Below plug-in is used to execute tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<suiteXmlFiles>
+						<!-- TestNG suite XML files -->
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+  
+  
+  
+  
 
   <dependencies>
     <dependency>
@@ -30,7 +62,7 @@
   <groupId>org.testng</groupId>
   <artifactId>testng</artifactId>
   <version>6.8</version>
-  <scope>test</scope>
+  <scope>compile</scope>
 </dependency>
 <dependency>
     <groupId>com.relevantcodes</groupId>
@@ -52,11 +84,6 @@
   		<artifactId>poi-ooxml</artifactId>
   		<version>3.15</version>
   	</dependency>
-  	 <dependency>
-    <groupId>javax.mail</groupId>
-    <artifactId>mail</artifactId>
-    <version>1.4</version>
-</dependency>
 	  <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
@@ -72,21 +99,21 @@
                <groupId>org.sikuli</groupId>
                <artifactId>sikuli-api</artifactId>
                <version>1.1.0</version>
-              <systemPath>${project.basedir}/Resources/JarFiles/sikulixapi.jar</systemPath>
+              <systemPath>${pom.basedir}/Resources/JarFiles/sikulixapi.jar</systemPath>
                <scope>system</scope>
      </dependency> 
        <dependency>
                <groupId>com.ctl.cipherTools</groupId>
                <artifactId>CipherMe</artifactId> 
                <version>1.1.0</version>              
-              <systemPath>${project.basedir}/Resources/JarFiles/CIPHERME.jar</systemPath>
+              <systemPath>${pom.basedir}/Resources/JarFiles/CIPHERME.jar</systemPath>
                <scope>system</scope>
      </dependency> 
      <dependency>
     <groupId>com.jayway.restassured</groupId>
     <artifactId>rest-assured</artifactId>
     <version>2.9.0</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 	</dependency>
 	<dependency>
     <groupId>com.jayway.jsonpath</groupId>
@@ -117,7 +144,7 @@
 		<groupId>com.smartbear.utils.analytics</groupId>
 		<artifactId>analytics-core</artifactId>
 		<version>5.3.0</version>
-		 <systemPath>${project.basedir}/Resources/JarFiles/analytics-core-5.3.0.jar</systemPath>
+		 <systemPath>${pom.basedir}/Resources/JarFiles/analytics-core-5.3.0.jar</systemPath>
 		 <scope>system</scope>
 	</dependency>
 	<dependency>
@@ -139,7 +166,7 @@
 		    <groupId>gnu.cajo</groupId>
 		    <artifactId>cajo</artifactId>
 		    <version>1.142</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/cajo-1.142.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/cajo-1.142.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	<dependency>
@@ -211,7 +238,7 @@
 		    <groupId>org.apache.flex</groupId>
 		    <artifactId>flex-messaging-common</artifactId>
 		    <version>1.0</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/flex-messaging-common-1.0.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/flex-messaging-common-1.0.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	
@@ -219,7 +246,7 @@
 		    <groupId>org.apache.flex</groupId>
 		    <artifactId>flex-messaging-core</artifactId>
 		    <version>1.0</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/flex-messaging-core-1.0.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/flex-messaging-core-1.0.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	
@@ -227,7 +254,7 @@
 		    <groupId>org.apache.flex</groupId>
 		    <artifactId>flex-messaging-opt</artifactId>
 		    <version>1.0</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/flex-messaging-opt-1.0.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/flex-messaging-opt-1.0.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	
@@ -235,7 +262,7 @@
 		    <groupId>org.apache.flex</groupId>
 		    <artifactId>flex-messaging-proxy</artifactId>
 		    <version>1.0</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/flex-messaging-proxy-1.0.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/flex-messaging-proxy-1.0.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	
@@ -243,7 +270,7 @@
 		    <groupId>org.apache.flex</groupId>
 		    <artifactId>flex-messaging-remoting</artifactId>
 		    <version>1.0</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/flex-messaging-remoting-1.0.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/flex-messaging-remoting-1.0.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/com.jgoodies/forms -->
@@ -268,41 +295,34 @@
 	    <groupId>org.hamcrest</groupId>
 	    <artifactId>hamcrest-core</artifactId>
 	    <version>1.3</version>
-	    <scope>test</scope>
+	    <scope>compile</scope>
 	</dependency>
 	<dependency>
 		    <groupId>hermesjms</groupId>
 		    <artifactId>hermes</artifactId>
 		    <version>1.14</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/hermes-1.14.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/hermes-1.14.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	<dependency>
 		    <groupId>httpclient</groupId>
 		    <artifactId>httpclient-cache</artifactId>
 		    <version>4.1.1</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/httpclient-cache-4.1.1.jar</systemPath>
-		 	<scope>system</scope>
-	</dependency>
-	<dependency>
-		    <groupId>httpclient</groupId>
-		    <artifactId>httpclient-cache</artifactId>
-		    <version>4.1.1</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/httpclient-cache-4.1.1.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/httpclient-cache-4.1.1.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	<dependency>
 		    <groupId>httpcore</groupId>
 		    <artifactId>httpcore-nio</artifactId>
 		    <version>4.1.1</version>
-		    <systemPath>${project.basedir}/Resources/JarFiles/httpcore-nio-4.1.1.jar</systemPath>
+		    <systemPath>${pom.basedir}/Resources/JarFiles/httpcore-nio-4.1.1.jar</systemPath>
 		 	<scope>system</scope>
 	</dependency>
 	<dependency>
 	    <groupId>org.sonatype.install4j</groupId>
 	    <artifactId>i4jruntime</artifactId>
 	    <version>5.1.14</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/i4jruntime-5.1.14.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/i4jruntime-5.1.14.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
@@ -352,7 +372,7 @@
 	    <groupId>javax.jms</groupId>
 	    <artifactId>jms</artifactId>
 	    <version>1.1</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/jms-1.1.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/jms-1.1.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
@@ -372,15 +392,10 @@
 	    <groupId>net.sf.json-lib</groupId>
 	    <artifactId>json-lib</artifactId>
 	    <version>2.2.2-jdk15</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/json-lib-2.2.2-jdk15.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/json-lib-2.2.2-jdk15.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
-	<dependency>
-	    <groupId>com.jayway.jsonpath</groupId>
-	    <artifactId>json-path</artifactId>
-	    <version>0.9.1</version>
-	</dependency>
+	
 	<!-- https://mvnrepository.com/artifact/net.minidev/json-smart -->
 	<dependency>
 	    <groupId>net.minidev</groupId>
@@ -404,21 +419,21 @@
 	    <groupId>net.sf.jtidy</groupId>
 	    <artifactId>jtidy</artifactId>
 	    <version>r872-jdk15</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/jtidy-r872-jdk15.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/jtidy-r872-jdk15.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<dependency>
 	    <groupId>com.l2fprod.common</groupId>
 	    <artifactId>l2fprod-common-directorychooser</artifactId>
 	    <version>7.3</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/l2fprod-common-directorychooser-7.3.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/l2fprod-common-directorychooser-7.3.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<dependency>
 	    <groupId>com.l2fprod.common</groupId>
 	    <artifactId>l2fprod-common-fontchooser</artifactId>
 	    <version>7.3</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/l2fprod-common-fontchooser-7.3.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/l2fprod-common-fontchooser-7.3.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
@@ -431,7 +446,7 @@
 	    <groupId>com.looks</groupId>
 	    <artifactId>looks-2.2.0r</artifactId>
 	    <version>2.2.0</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/looks-2.2.0.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/looks-2.2.0.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
@@ -473,7 +488,7 @@
 	    <groupId>com.github.markusbernhardt</groupId>
 	    <artifactId>proxy-vole</artifactId>
 	    <version>20131209</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/proxy-vole-20131209.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/proxy-vole-20131209.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
@@ -505,7 +520,7 @@
 	    <groupId>net.sf.saxon</groupId>
 	    <artifactId>saxon-dom</artifactId>
 	    <version>9.1.0.8</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/saxon-dom-9.1.0.8j.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/saxon-dom-9.1.0.8j.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/xalan/serializer -->
@@ -530,7 +545,7 @@
 		<groupId>com.smartbear.soapui</groupId>
         <artifactId>soapui</artifactId>
         <version>5.3.0</version>
-		<systemPath>${project.basedir}/Resources/JarFiles/soapui-5.3.0.jar</systemPath>
+		<systemPath>${pom.basedir}/Resources/JarFiles/soapui-5.3.0.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.swinglabs/swingx -->
@@ -538,7 +553,7 @@
 	    <groupId>com.smartbear.soapui</groupId>
 	    <artifactId>swingx-soapui</artifactId>
 	    <version>1.0.0</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/swingx-soapui.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/swingx-soapui.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.ws.commons.util/ws-commons-util -->
@@ -552,7 +567,7 @@
 	    <groupId>wsdl4j</groupId>
 	    <artifactId>wsdl4j</artifactId>
 	    <version>1.6.2-fixed</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/wsdl4j-1.6.2-fixed.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/wsdl4j-1.6.2-fixed.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.ws.security/wss4j -->
@@ -566,7 +581,7 @@
 	    <groupId>xalan</groupId>
 	    <artifactId>xalan</artifactId>
 	    <version>2.7.1</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/xalan-2.7.1.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/xalan-2.7.1.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans-xpath -->
@@ -574,7 +589,7 @@
 	    <groupId>xbean_xpath</groupId>
 	    <artifactId>xbean_xpath</artifactId>
 	    <version>2.4.0</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/xbean_xpath-2.4.0.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/xbean_xpath-2.4.0.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.unitils.soapui/unitils-soapui -->
@@ -582,7 +597,7 @@
 	    <groupId>xbean</groupId>
 	    <artifactId>xbean-fixed</artifactId>
 	    <version>2.4.0</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/xbean-fixed-2.4.0.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/xbean-fixed-2.4.0.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
@@ -602,7 +617,7 @@
 	    <groupId>xerces</groupId>
 	    <artifactId>xml-apis</artifactId>
 	    <version>2.9.1</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/xml-apis-2.9.1.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/xml-apis-2.9.1.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/xerces/xmlParserAPIs -->
@@ -616,7 +631,7 @@
 	    <groupId>xmlpublic</groupId>
 	    <artifactId>xmlpublic</artifactId>
 	    <version>2.4.0</version>
-	    <systemPath>${project.basedir}/Resources/JarFiles/xmlpublic-2.4.0.jar</systemPath>
+	    <systemPath>${pom.basedir}/Resources/JarFiles/xmlpublic-2.4.0.jar</systemPath>
 		<scope>system</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.santuario/xmlsec -->
