commit todays changes

--- a/Resources/config.properties
+++ b/Resources/config.properties
@@ -1,11 +1,11 @@
-URL=https://www.flipkart.com/
+URL=https://www.naukri.com/
 TimeOut=20
 APPPACCKAGE=com.bt.bms
 APPACTIVITY=com.movie.bms.splash.views.activities.SplashScreenActivity
-DEVICENAME=e754d6d3
+DEVICENAME=0123456789ABCDEF
 APPTYPE=WebApp
-ANDROIDVERSION=5.1.1
-APPURL=https://www.google.com/
+ANDROIDVERSION=5.0.1
+APPURL=https://www.naukri.com/
 ServiceURI				= https://www.googleapis.com
 Resources				= /books/v1/volumes
 PostResources			= /maps/api/place/add/json
