commit the final code

--- a/Resources/config.properties
+++ b/Resources/config.properties
@@ -2,9 +2,9 @@ URL=https://www.naukri.com/
 TimeOut=20
 APPPACCKAGE=com.bt.bms
 APPACTIVITY=com.movie.bms.splash.views.activities.SplashScreenActivity
-DEVICENAME=0123456789ABCDEF
+DEVICENAME=e754d6d3
 APPTYPE=WebApp
-ANDROIDVERSION=5.0.1
+ANDROIDVERSION=6.0.1
 APPURL=https://www.naukri.com/
 ServiceURI				= https://www.googleapis.com
 Resources				= /books/v1/volumes
