COMMIT LAST CHANGES

--- a/Resources/config.properties
+++ b/Resources/config.properties
@@ -2,9 +2,9 @@ URL=https://www.naukri.com/
 TimeOut=20
 APPPACCKAGE=com.bt.bms
 APPACTIVITY=com.movie.bms.splash.views.activities.SplashScreenActivity
-DEVICENAME=e754d6d3
+DEVICENAME=e8741e7
 APPTYPE=WebApp
-ANDROIDVERSION=6.0.1
+ANDROIDVERSION=5.1.1
 APPURL=https://www.naukri.com/
 ServiceURI				= https://www.googleapis.com
 Resources				= /books/v1/volumes
@@ -17,3 +17,11 @@ PASSWORD=
 EMAILTEXT=
 CCEMAIL=
 SUBJECT=
+ORACLEDRIVER =oracle.jdbc.driver.OracleDriver
+ORACLEDATABASE=jdbc:oracle:thin:@dnetsd2.dev.qintra.com:1525:dnetsd2
+#Connecting to the products database on a named MongoDB server db3.server.com running 
+#on port 27027 with user tom and password secret:
+MONGODATABASE = mongodb://tom:secret@db3.server.com:27027/products
+MYSQLDRIVER =com.mysql.jdbc.Driver
+MYSQLDATABSE = jdbc:mysql://localhost:3306/sonoo
+
